Referenced/Nintex DocGen/objects/Document_Request__c.object
<CustomObject>
    <description>Document Queue for Document Packages</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Document Requests</relationshipLabel>
        <relationshipName>Document_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Id__c</fullName>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name_Link__c</fullName>
        <formula>IF(Document_Id__c &lt;&gt; &quot;&quot;, HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Document_Id__c , Document_Name__c, &quot;_blank&quot;),  CASE( Status__c , &quot;Pending&quot;, &quot;&quot;, &quot;Error&quot;, &quot;&quot;, Document_Name__c) )</formula>
        <label>Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name (text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Link__c</fullName>
        <label>Email Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF (Email_Link__c &lt;&gt; &quot;&quot;, HYPERLINK(Email_Link__c, &quot;Email&quot;,&quot;_self&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Id__c</fullName>
        <label>Error Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Queue_Id__c</fullName>
        <label>Job Queue Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOOP__c</fullName>
        <formula>IF( Document_Id__c &lt;&gt;&quot;&quot;, HYPERLINK(&quot;/apex/loop__loopit?docIds=&quot; &amp; Document_Id__c, &quot;LOOP&quot;,&quot;_self&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOOP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Looped</fullName>
                </value>
                <value>
                    <fullName>Emailed</fullName>
                </value>
                <value>
                    <fullName>Merged</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_Name_Link__c</columns>
        <columns>Email__c</columns>
        <columns>LOOP__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Complete</fullName>
        <columns>NAME</columns>
        <columns>Document_Name_Link__c</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Complete</label>
    </listViews>
    <listViews>
        <fullName>Error</fullName>
        <columns>NAME</columns>
        <columns>Error_Id__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Error</label>
    </listViews>
    <listViews>
        <fullName>Fulfilled</fullName>
        <columns>NAME</columns>
        <columns>Document_Name_Link__c</columns>
        <columns>Contact__c</columns>
        <columns>Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Looped,Emailed,Merged</value>
        </filters>
        <label>Fulfilled</label>
    </listViews>
    <listViews>
        <fullName>Pending</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending</label>
    </listViews>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Document Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drawloop Document Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>